# routes/routes.go
@@ -11,6 +11,7 @@ var (
 )
 
 func init() {
+
 	// swagger:route GET /persons/{id_person} person-tag GetPersonByIDRequestParameter
 	//
 	// Get person by id.
@@ -55,26 +56,36 @@ func init() {
 	//       400: ErrorResponse
 	Router.HandleFunc("/v1/persons/{id}/addresses/{id_address}", controllers.GetPersonAddressByID).Methods(http.MethodGet)
 
-	// swagger:route GET / not-found-tag
+	// swagger:operation GET /errors getErrors
 	//
-	// Not Found
+	// Returns the error definition
 	//
-	// This will return error.
+	// Could be any pet
 	//
-	//     Consumes:
-	//     - application/json
-	//
-	//     Produces:
-	//     - application/json
-	//
-	//     Schemes: http, https
-	//
-	//     Deprecated: false
-	//
-	//     Responses:
-	//       default: ErrorResponse
-	//       404: ErrorResponse
-	Router.HandleFunc("/v1/", controllers.NotFound)
+	// ---
+	// produces:
+	// - application/json
+	// parameters:
+	// - name: id_error
+	//   in: query
+	//   description: the error id
+	//   required: true
+	//   type: integer
+	//   format: int32
+	// responses:
+	//   '200':
+	//     description: the error definition
+	//     schema:
+	//       type: object
+	//       "$ref": "#/responses/ErrorResponse"
+	//   '204':
+	//     description: no content
+	//   default:
+	//     description: the error definition
+	//     schema:
+	//       type: object
+	//       "$ref": "#/responses/ErrorResponse"
+	Router.HandleFunc("/v1/errors", controllers.GetErrorByID)
 
 	fs := http.FileServer(http.Dir("./spec"))
 	Router.PathPrefix("/swaggerui/").Handler(http.StripPrefix("/swaggerui/", fs))
